--- a/package.json
+++ b/package.json
@@ -9,16 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
+    "@headlessui/react": "^1.7.2",
+    "dayjs": "^1.11.5",
+    "framer-motion": "^7.3.6",
+    "ioredis": "^5.2.3",
+    "ms": "^2.1.3",
     "next": "12.3.1",
+    "nextkit": "^3.4.3",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.55.0",
+    "spotify-web-api-node": "^5.0.2",
+    "swr": "^1.3.0",
+    "typestr": "0.0.10",
+    "urlcat": "^2.0.4",
+    "use-lanyard": "^1.2.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.31",
     "@types/node": "18.7.18",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "@types/tailwindcss": "^3.1.0",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
 }
