--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.3.1",
     "nextkit": "^3.4.3",
     "nprogress": "^0.2.0",
+    "package-name": "^0.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
