--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
 		"allowSyntheticDefaultImports": true,
 		"incremental": true
 	},
-	"exclude": ["node_modules"],
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+	"exclude": ["node_modules",  "src/**/*.spec.ts"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","src/**/*"]
 }
