--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react-dom": "18.0.6",
     "@types/spotify-web-api-node": "^5.0.7",
     "@types/tailwindcss": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
     "autoprefixer": "^10.4.12",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
