--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "eslint-plugin-tailwindcss": "^3.12.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "4.9.5"
