--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,12 @@
 		"jsx": "preserve",
 		"noFallthroughCasesInSwitch": true,
 		"allowSyntheticDefaultImports": true,
-		"incremental": true
+		"incremental": true,
+		"baseUrl": "./",
+		"paths": {
+			"*": ["src/client/@videsk/tailwind-random-color/*"]
+		}
 	},
-	"exclude": ["node_modules"],
+	"exclude": ["node_modules", "src/client/@videsk/tailwind-random-color/*"],
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
