--- a/package.json
+++ b/package.json
@@ -36,16 +36,17 @@
     "@types/ms": "^0.7.31",
     "@types/node": "18.7.18",
     "@types/nprogress": "^0.2.0",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.0.6",
     "@types/spotify-web-api-node": "^5.0.7",
     "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
     "eslint-plugin-tailwindcss": "^3.12.1",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "4.9.5"
   }
 }
