--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typestr": "0.0.10",
     "urlcat": "^2.0.4",
     "use-lanyard": "^1.4.2",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.19.1"
   },
   "devDependencies": {
