--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bradgarropy/next-google-analytics": "^1.0.2",
     "@emailjs/browser": "^3.7.0",
     "@headlessui/react": "^1.7.2",
+    "@react-spring/web": "^9.7.3",
+    "@swc/helpers": "^0.5.1",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
     "framer-motion": "^7.3.6",
     "ioredis": "^5.2.3",
     "ms": "^2.1.3",
     "next": "12.3.1",
+    "nextjs-google-analytics": "^2.3.3",
     "nextkit": "^3.4.3",
     "nprogress": "^0.2.0",
     "package-name": "^0.1.0",
@@ -23,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
+    "react-use-measure": "^2.1.1",
     "sass": "^1.55.0",
     "spotify-web-api-node": "^5.0.2",
     "swr": "^1.3.0",
