--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^7.3.6",
     "ioredis": "^5.2.3",
     "ms": "^2.1.3",
+    "net": "^1.0.2",
     "next": "12.3.1",
     "nextjs-google-analytics": "^2.3.3",
     "nextkit": "^3.4.3",
@@ -28,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.3",
     "react-use-measure": "^2.1.1",
     "sass": "^1.55.0",
     "spotify-web-api-node": "^5.0.2",
