--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.2",
     "@react-spring/web": "^9.7.3",
     "@swc/helpers": "^0.5.1",
+    "@tippyjs/react": "^4.2.6",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
     "framer-motion": "^7.3.6",
@@ -30,6 +31,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.3",
+    "react-tippy": "^1.4.0",
     "react-use-measure": "^2.1.1",
     "sass": "^1.55.0",
     "spotify-web-api-node": "^5.0.2",
