--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@swc/helpers": "^0.5.1",
     "@tippyjs/react": "^4.2.6",
     "classnames": "^2.3.2",
+    "cookies-next": "^4.0.0",
     "dayjs": "^1.11.5",
     "framer-motion": "^7.3.6",
     "ioredis": "^5.2.3",
