--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.3",
-    "react-tippy": "^1.4.0",
     "sass": "^1.55.0",
     "spotify-web-api-node": "^5.0.2",
     "swr": "^1.3.0",
+    "tippy.js": "^6.3.7",
     "typestr": "0.0.10",
     "urlcat": "^2.0.4",
     "use-lanyard": "^1.4.2",
