--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@react-spring/web": "^9.7.3",
 		"@swc/helpers": "^0.5.1",
 		"@tippyjs/react": "^4.2.6",
+		"@vercel/analytics": "^1.2.2",
+		"@vercel/speed-insights": "^1.0.10",
 		"classnames": "^2.3.2",
 		"cookies-next": "^4.0.0",
 		"dayjs": "^1.11.5",
