--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"ioredis": "^5.2.3",
 		"ms": "^2.1.3",
 		"net": "^1.0.2",
-		"next": "12.3.1",
+		"next": "^13.0.6",
 		"nextjs-google-analytics": "^2.3.3",
 		"nextkit": "^3.4.3",
 		"nprogress": "^0.2.0",
@@ -54,6 +54,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
 		"@videsk/tailwind-random-color": "^0.2.0-beta",
 		"autoprefixer": "^10.4.14",
+		"colorthief": "^2.4.0",
 		"eslint": "8.23.1",
 		"eslint-config-next": "12.3.1",
 		"eslint-plugin-tailwindcss": "^3.12.1",
