--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"@bradgarropy/next-google-analytics": "^1.0.2",
 		"@emailjs/browser": "^3.7.0",
-		"@headlessui/react": "^1.7.2",
+		"@headlessui/react": "^1.7.19",
 		"@headlessui/tailwindcss": "^0.2.0",
 		"@react-spring/web": "^9.7.3",
 		"@swc/helpers": "^0.5.1",
@@ -59,6 +59,8 @@
 		"eslint-config-next": "12.3.1",
 		"eslint-plugin-tailwindcss": "^3.12.1",
 		"postcss": "^8.4.24",
+		"prettier": "^3.3.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"tailwindcss": "^3.3.2",
 		"typescript": "4.9.5"
 	}
