--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
 		"react-query": "^3.39.3",
 		"sass": "^1.55.0",
 		"spotify-web-api-node": "^5.0.2",
-		"swr": "^1.3.0",
+		"sync-lyrics": "^1.0.5",
 		"tippy.js": "^6.3.7",
 		"typestr": "0.0.10",
 		"urlcat": "^2.0.4",
 		"use-lanyard": "^1.4.2",
 		"usehooks-ts": "^2.9.1",
+		"uuid": "^10.0.0",
 		"zod": "^3.19.1"
 	},
 	"devDependencies": {
@@ -51,6 +52,7 @@
 		"@types/react-dom": "^18.0.6",
 		"@types/spotify-web-api-node": "^5.0.7",
 		"@types/tailwindcss": "^3.1.0",
+		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
 		"@videsk/tailwind-random-color": "^0.2.0-beta",
 		"autoprefixer": "^10.4.14",
