--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@emailjs/browser": "^3.7.0",
 		"@headlessui/react": "^1.7.19",
 		"@headlessui/tailwindcss": "^0.2.0",
+		"@next/font": "^14.2.8",
 		"@react-spring/web": "^9.7.3",
 		"@swc/helpers": "^0.5.1",
 		"@tippyjs/react": "^4.2.6",
